objects/Team_Member__c.object
<CustomObject>
    <description>Store the user assigned by work team in TA, this object is used to handle the security.</description>
    <fields>
        <fullName>ActiveValidation__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>Field used to ensure that the a user has a single membership in active process.
This field is filled by Work Flow rule, if the membership is inactive takes the Salesforce ID of the record and if the membership is active takes the Salesforce ID of the user member of the team concatenated with TRUE.</description>
        <label>Active validation</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Is_Active__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used to indicate if the assignation is active or not.</description>
        <label>Is Active?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Legajo__c</fullName>
        <formula>User_member__r.FederationIdentifier</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Legajo</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MemberUsername__c</fullName>
        <description>Pfta-9344: field used to display the username of the user in the view to disable team members . Security</description>
        <formula>User_member__r.Username</formula>
        <label>Member Username</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MemberUserprofile__c</fullName>
        <description>Takes the name of the profile assigned to the user.</description>
        <formula>User_member__r.Profile.Name</formula>
        <label>Member Userprofile</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MemberUserrole__c</fullName>
        <description>Used to display the user role assigned to the user in salesforce.</description>
        <formula>User_member__r.UserRole.Name</formula>
        <label>Member user role</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UserRoleAPIName__c</fullName>
        <description>It is used to store the API name of the Salesfor Role assigned to the user based in the roles available for the work team in Work team permissions.</description>
        <externalId>true</externalId>
        <label>User Role API Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_member__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is used to relate a user with the work team that it belongs to. Used in the security design done for TA.</description>
        <label>User member</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Team_Members</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Work_Team__c</fullName>
        <description>This field is used to store the assignation of a team member (user) with a work team that it belongs to.</description>
        <label>Work Team</label>
        <referenceTo>WorkTeam__c</referenceTo>
        <relationshipLabel>Work Team Members</relationshipLabel>
        <relationshipName>Team_Members1</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <label>Work Team Member</label>
    <listViews>
        <fullName>All1</fullName>
        <columns>User_member__c</columns>
        <columns>NAME</columns>
        <columns>Is_Active__c</columns>
        <columns>Work_Team__c</columns>
        <columns>Legajo__c</columns>
        <columns>UserRoleAPIName__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>b_relacion</fullName>
        <columns>NAME</columns>
        <columns>User_member__c</columns>
        <columns>Work_Team__c</columns>
        <columns>OBJECT_ID</columns>
        <columns>UserRoleAPIName__c</columns>
        <columns>Is_Active__c</columns>
        <columns>Legajo__c</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>User_member__c</field>
            <operation>contains</operation>
            <value>bailo</value>
        </filters>
        <label>busar relacion</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>T-{00000000}</displayFormat>
        <label>Team Member Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Work Team Members</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>ValidateIfUserIsActive</fullName>
        <active>true</active>
        <errorConditionFormula>NOT( User_member__r.IsActive ) &amp;&amp;  Is_Active__c</errorConditionFormula>
        <errorMessage>You can not activate a membership to an inactive user.</errorMessage>
    </validationRules>
</CustomObject>